[gd_scene load_steps=11 format=3 uid="uid://d0qgldypsdhwg"]

[ext_resource type="Script" path="res://Assets/UI/main_menu/main_menu.gd" id="1_3ro7t"]
[ext_resource type="Texture2D" uid="uid://bgeins8yppghv" path="res://Assets/UI/main_menu/main_menu.png" id="1_rtbow"]
[ext_resource type="FontFile" uid="uid://blykbpqefuxbh" path="res://TooMuchInk.ttf" id="2_jttxi"]
[ext_resource type="PackedScene" uid="uid://b4akratys6jl" path="res://Assets/UI/options_menu/options_menu.tscn" id="4_do7xk"]
[ext_resource type="AudioStream" uid="uid://ckv3j37ywue10" path="res://Assets/Sounds/Metal-Gear-Solid-Menu-Theme-_480p_25fps_H264-128kbit_AAC_.mp3" id="5_6usvt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_om1p6"]
texture = ExtResource("1_rtbow")
modulate_color = Color(0.517184, 0.517184, 0.517184, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cabqj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h881i"]
bg_color = Color(0.733005, 0.733005, 0.733005, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.207843)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u0mkb"]
bg_color = Color(0.396889, 0.396889, 0.396889, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.207843)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1yy31"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.207843)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_3ro7t")

[node name="Panel" type="Panel" parent="."]
offset_right = 1922.0
offset_bottom = 1081.0
theme_override_styles/panel = SubResource("StyleBoxTexture_om1p6")

[node name="MenuButtons" type="VBoxContainer" parent="."]
offset_left = 733.0
offset_top = 635.0
offset_right = 1186.0
offset_bottom = 880.0
theme_override_constants/separation = 20

[node name="StartGame" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_constants/align_to_largest_stylebox = 0
theme_override_fonts/font = ExtResource("2_jttxi")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_cabqj")
theme_override_styles/hover = SubResource("StyleBoxFlat_h881i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u0mkb")
theme_override_styles/normal = SubResource("StyleBoxFlat_1yy31")
text = "Start Game"
metadata/_edit_use_anchors_ = true

[node name="Options" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_constants/align_to_largest_stylebox = 0
theme_override_fonts/font = ExtResource("2_jttxi")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_cabqj")
theme_override_styles/hover = SubResource("StyleBoxFlat_h881i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u0mkb")
theme_override_styles/normal = SubResource("StyleBoxFlat_1yy31")
text = "Options"
metadata/_edit_use_anchors_ = true

[node name="Exit" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_constants/align_to_largest_stylebox = 0
theme_override_fonts/font = ExtResource("2_jttxi")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_cabqj")
theme_override_styles/hover = SubResource("StyleBoxFlat_h881i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u0mkb")
theme_override_styles/normal = SubResource("StyleBoxFlat_1yy31")
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="MenuTitle" type="Label" parent="."]
offset_left = 694.0
offset_top = 359.0
offset_right = 1227.0
offset_bottom = 505.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_jttxi")
theme_override_font_sizes/font_size = 60
text = "Going Dark"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OptionsMenu" parent="CanvasLayer" instance=ExtResource("4_do7xk")]
visible = false

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6usvt")
volume_db = -10.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MenuButtons/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MenuButtons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MenuButtons/Exit" to="." method="_on_exit_pressed"]
